#86 feat: lab asistant member api
