# backend/internal/routers.go
@@ -24,6 +24,7 @@ func SetRoutes(router *gin.Engine) {
 		v1.GET("/attendees-list", controllers.GetAttendeesListController)
 		v1.PUT("/status", controllers.PutStatusController)
 		v1.GET("/access-history/:date", controllers.GetAccessHistoryController)
+		v1.GET("/lab-asistant-member", controllers.GetLabAsistantMemberController)
 
 		webauthn := v1.Group("/webauthn")
 		{
