# backend/internal/schema/model_get_lab_asistant_schedule_200_response_inner.go
@@ -9,16 +9,10 @@
 
 package schema
 
-type PostSignIn200Response struct {
-
-	UserId int32 `json:"user_id"`
+type GetLabAsistantSchedule200ResponseInner struct {
 
 	UserName string `json:"user_name"`
 
-	Status string `json:"status"`
-
-	AvatarId int32 `json:"avatar_id"`
-
-	AvatarImgPath string `json:"avatar_img_path"`
+	ShiftDate string `json:"shift_date"`
 }
 
