# backend/internal/schema/model_post_lab_asistant_schedule_request_inner.go
@@ -9,16 +9,10 @@
 
 package schema
 
-type PostSignIn200Response struct {
+type PostLabAsistantScheduleRequestInner struct {
 
 	UserId int32 `json:"user_id"`
 
-	UserName string `json:"user_name"`
-
-	Status string `json:"status"`
-
-	AvatarId int32 `json:"avatar_id"`
-
-	AvatarImgPath string `json:"avatar_img_path"`
+	ShiftDate string `json:"shift_date"`
 }
 
